--- a/employeehappiness_api/package.json
+++ b/employeehappiness_api/package.json
@@ -32,6 +32,7 @@
     "reflect-metadata": "^0.1.13",
     "ts-node": "^9.1.1",
     "type-graphql": "^1.1.1",
+    "typeorm": "^0.2.32",
     "typescript": "^4.1.3",
     "typescript-rest": "^3.0.2"
   },
