--- a/employeehappiness_api/package.json
+++ b/employeehappiness_api/package.json
@@ -4,31 +4,32 @@
   "description": "API for employeehappiness front end",
   "main": "src/app.ts",
   "scripts": {
-    "watch": "tsc -w",
-    "dev": "nodemon dist/app.js",
-    "start": "node dist/app.js",
-    "create:migration": "npx mikro-orm migration:create"
+    "start": "nodemon --watch 'src/**/*.ts' --exec ts-node --files src/app.ts",
+    "dev": "nodemon ./src/app.ts",
+    "build": "rm -rf build && tsc -p .",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@mikro-orm/cli": "^4.5.0",
-    "@mikro-orm/core": "^4.5.0",
-    "@mikro-orm/mysql": "^4.5.0",
+    "@mikro-orm/core": "^4.5.3",
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
-    "@types/node": "^14.14.35",
-    "apollo-server-express": "^2.21.2",
+    "@types/node": "^14.14.37",
+    "apollo-server-express": "^2.22.2",
+    "argon2": "^0.27.2",
     "body-parser": "^1.19.0",
+    "class-validator": "^0.13.1",
     "connect-redis": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
     "express-session": "^1.17.1",
     "graphql": "^15.5.0",
-    "mysql2": "^2.2.5",
+    "mysql": "^2.18.1",
     "node-fetch": "^2.6.1",
-    "redis": "^3.0.2",
+    "redis": "^3.1.0",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^9.1.1",
     "type-graphql": "^1.1.1",
